fixed hero on mobile devices

--- a/airbnb-experiences-clone/src/style.css
+++ b/airbnb-experiences-clone/src/style.css
@@ -49,7 +49,7 @@ body {
 
 .hero--container > p {
   font-size: 1.25rem;
-  width: 25rem;
+  max-width: 25rem;
 }
 
 /* Card Group */
